Fix Sorter alignment

--- a/src/app/sass/components/_app.scss
+++ b/src/app/sass/components/_app.scss
@@ -2,7 +2,7 @@
  Media Query Styles
 ************************/
 
-@media only screen and (min-width: 1025px) {
+@media only screen and (min-width: 481px) {
   .app-container {
     display: flex;
     justify-content: center;
